bg image changed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta id="Viewport" name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1">
-    <title>NFT-Crypto</title>
+    <title>Hbarbarian Club</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,6 +16,7 @@
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="assets/css/preloader.css">
+    <link rel="shortcut icon" href="favicon.png">
 </head>
 
 <body class="loaded">
@@ -51,9 +52,9 @@
                 <div class="header__center js-from-1">
                     <div class="header-mob js-content-1">
                         <ul class="main-nav">
-                            <li class="main-nav__item">
+                            <!-- <li class="main-nav__item">
                                 <a class="main-nav__link js-scrolltoid" href="#abt">About</a>
-                            </li>
+                            </li> -->
                             <li class="main-nav__item">
                                 <a class="main-nav__link js-scrolltoid" href="#ui">Collection</a>
                             </li>
@@ -101,8 +102,8 @@
                     <div class="first-screen__max">
                         <div class="first-screen__content">
                             <div class="first-screen__cell">
-                                <span class="above-title">Welcome to the Party!</span>
-                                <h1 class="first-screen__title">Welcome Onboard Mr.Pirate!</h1>
+                                <!-- <span class="above-title">Welcome to the Party!</span> -->
+                                <!-- <h1 class="first-screen__title">Welcome to Hbarbarian Club</h1> -->
                                 <!-- <p class="first-screen__text">Laboris culpa ea incididunt dolore ipsum tempor
                                     duis&nbsp;do ullamco eiusmod officia magna ad id.</p> -->
                                 <!-- <a class="first-screen__button button" href="#">
@@ -118,7 +119,7 @@
                 </div>
                 <!-- <div class="first-screen__pseudotext" data-title="work faster with powerful tools"></div> -->
                 <div class="first-screen__bg-1" data-bg="assets/img/first-screen-bg.jpg" data-lazy-mob></div>
-                <div class="first-screen__bg-2" data-bg="assets/img/first-screen-bottom.png" data-lazy-mob></div>
+                <!-- <div class="first-screen__bg-2" data-bg="assets/img/first-screen-bottom.png" data-lazy-mob></div> -->
             </section>
             <!-- FIRST SCREEN END -->
 
@@ -153,11 +154,11 @@
                 </div>
                 <img class="most-popular__left-element side-element"
                     src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="assets/img/svg/side-element_2 copy.png" alt="" style="left:-100px;top:20%;">
+                    data-lazy="assets/img/svg/side-element_2 copy.png" alt="" style="left:-100px;top:17%;">
 
                 <img class="what-you-get__right-element side-element"
                     src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="assets/img/svg/side-element_1 copy.png" alt="" style="right:-100px;top:29%;">
+                    data-lazy="assets/img/svg/side-element_1 copy.png" alt="" style="right:-100px;top:23%;">
                 <!-- THE MOST POPULAR END -->
 
                 <!-- BEGIN WHAT YOU GET -->
@@ -347,7 +348,7 @@
                                 <div class="box-container ui-slider__list js-slider-list">
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
-                                            <img class="ui-slider__image" src="assets/img/ui1.jpg" alt="">
+                                            <img class="ui-slider__image" src="assets/img/tokens/viking3.jpg" alt="">
                                             <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
                                             </a>
@@ -355,7 +356,7 @@
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
-                                            <img class="ui-slider__image" src="assets/img/ui1.jpg" alt="">
+                                            <img class="ui-slider__image" src="assets/img/tokens/viking2.jpg" alt="">
                                             <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
                                             </a>
@@ -363,7 +364,7 @@
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
-                                            <img class="ui-slider__image" src="assets/img/ui1.jpg" alt="">
+                                            <img class="ui-slider__image" src="assets/img/tokens/viking.jpg" alt="">
                                             <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
                                             </a>
@@ -371,7 +372,7 @@
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
-                                            <img class="ui-slider__image" src="assets/img/ui1.jpg" alt="">
+                                            <img class="ui-slider__image" src="assets/img/tokens/viking4.jpg" alt="">
                                             <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
                                             </a>
@@ -379,7 +380,7 @@
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
-                                            <img class="ui-slider__image" src="assets/img/ui1.jpg" alt="">
+                                            <img class="ui-slider__image" src="assets/img/tokens/viking5.jpg" alt="">
                                             <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
                                             </a>
@@ -387,7 +388,7 @@
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
-                                            <img class="ui-slider__image" src="assets/img/ui1.jpg" alt="">
+                                            <img class="ui-slider__image" src="assets/img/tokens/viking6.jpg" alt="">
                                             <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
                                             </a>
@@ -395,7 +396,7 @@
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
-                                            <img class="ui-slider__image" src="assets/img/ui1.jpg" alt="">
+                                            <img class="ui-slider__image" src="assets/img/tokens/viking7.jpg" alt="">
                                             <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
                                             </a>
@@ -403,7 +404,39 @@
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
-                                            <img class="ui-slider__image" src="assets/img/ui1.jpg" alt="">
+                                            <img class="ui-slider__image" src="assets/img/tokens/viking8.jpg" alt="">
+                                            <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                                <span class="button__text">Purchase</span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <!-- <div class="box ui-slider__item js-slider-item">
+                                        <div class="thumbnail ui-slider__image-wrap">
+                                            <img class="ui-slider__image" src="assets/img/tokens/viking9.jpg" alt="">
+                                            <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                                <span class="button__text">Purchase</span>
+                                            </a>
+                                        </div>
+                                    </div> -->
+                                    <div class="box ui-slider__item js-slider-item">
+                                        <div class="thumbnail ui-slider__image-wrap">
+                                            <img class="ui-slider__image" src="assets/img/tokens/viking10.jpg" alt="">
+                                            <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                                <span class="button__text">Purchase</span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="box ui-slider__item js-slider-item">
+                                        <div class="thumbnail ui-slider__image-wrap">
+                                            <img class="ui-slider__image" src="assets/img/tokens/viking11.jpg" alt="">
+                                            <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                                <span class="button__text">Purchase</span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="box ui-slider__item js-slider-item">
+                                        <div class="thumbnail ui-slider__image-wrap">
+                                            <img class="ui-slider__image" src="assets/img/tokens/viking12.jpg" alt="">
                                             <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
                                             </a>
@@ -647,7 +680,7 @@
                     data-lazy="assets/img/svg/side-element_2 copy.png" alt="" style="left:-100px;top:0;">
                 <img class="trial-block__right-element side-element"
                     src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="assets/img/svg/side-element_1 copy.png" alt="" style="right:-80px;top:45%;">
+                    data-lazy="assets/img/svg/side-element_1 copy.png" alt="" style="right:-80px;top:40%;">
             </div>
             <!-- RESPONSES END -->
 
@@ -687,25 +720,25 @@
                     <div class="box-container2 row">
                         <div class="box2 col-10 col-md-3">
                             <div class="thumbnail2">
-                                <img src="assets/img/1.jpeg">
+                                <img src="assets/img/crew/1.jpeg">
                                 <div class="feature__content">
-                                    <h4 class="feature__title">Abc Perera</h4>
+                                    <h4 class="feature__title">Summer - Developer</h4>
                                 </div>
                             </div>
                         </div>
                         <div class="box2 col-10 col-md-3">
                             <div class="thumbnail2">
-                                <img src="assets/img/1.jpeg">
+                                <img src="assets/img/crew/2.jpg">
                                 <div class="feature__content">
-                                    <h4 class="feature__title">Abc Perera</h4>
+                                    <h4 class="feature__title">Mila - Artist</h4>
                                 </div>
                             </div>
                         </div>
                         <div class="box2 col-10 col-md-3">
                             <div class="thumbnail2">
-                                <img src="assets/img/1.jpeg">
+                                <img src="assets/img/crew/3.jpg">
                                 <div class="feature__content">
-                                    <h4 class="feature__title">Abc Perera</h4>
+                                    <h4 class="feature__title">Harry - Developer</h4>
                                 </div>
                             </div>
                         </div>
@@ -1032,8 +1065,8 @@
             </div>
             <!-- SUBSCRIPTION END -->
 
-            <div class="footer-top wrapper">
-                <!-- <a class="footer-logo" href="#">Upland</a> -->
+            <!-- <div class="footer-top wrapper">
+                <a class="footer-logo" href="#">Upland</a>
                 <div class="footer-nav">
                     <ul class="main-nav main-nav_center">
                         <li class="main-nav__item">
@@ -1048,15 +1081,16 @@
                         <li class="main-nav__item">
                             <a class="main-nav__link js-scrolltoid" href="#cnt">Contact</a>
                         </li>
-                        <!-- <li class="main-nav__item">
+                        <li class="main-nav__item">
                             <a class="main-nav__button js-scrolltoid" href="#trial">Free trial</a>
-                        </li> -->
+                        </li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
             <div class="footer-bottom">
                 <div class="footer-bottom__main wrapper">
-                    <span class="copyrights">&copy; All rights reserved. Pirates NFT 2021</span>
+                    <br><br>
+                    <span class="copyrights" style="color: black;">&copy; All rights reserved. Pirates NFT 2021</span>
                 </div>
             </div>
             <div class="footer__bg" data-bg="assets/img/footer-bg.png"></div>
