--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <a class="main-nav__link js-scrolltoid" href="#rm">Road Map</a>
                             </li>
                             <li class="main-nav__item">
-                                <a class="main-nav__link js-scrolltoid" href="#cnt">Contact</a>
+                                <a class="main-nav__link js-scrolltoid" href="#cnt">Discord</a>
                             </li>
                             <!-- <li class="main-nav__item">
                                 <a class="main-nav__link js-scrolltoid" href="#faq">FAQ</a>
@@ -132,17 +132,15 @@
                             <div class="most-popular__right">
                                 <h2 class="most-popular__title main-title main-title_align-left"
                                     data-title="Know about us?">
-                                    <span class="main-title__text">Wanna know about us?</span>
+                                    <span class="main-title__text">About Hbarbarian Club</span>
                                 </h2>
-                                <p class="most-popular__text">Culpa non ex tempor qui nulla laborum. Laboris&nbsp;culpa
-                                    ea incididunt dolore ipsum.</p>
+                                <p class="most-popular__text">Inspired by the community itself, Hbarbarian Club is one of the first major NFT projects, proudly minted on HederaHashgraph! </p>
                                 <ul class="check-list">
-                                    <li class="check-list__item">Elit mollit aliqua quis ad sint nulla Lorem commodo
-                                        reprehenderit.</li>
-                                    <li class="check-list__item">Tempor consectetur aliqua aute veniam occaecat eu do
-                                        esse adipisicin</li>
-                                    <li class="check-list__item">Culpa non ex tempor qui nulla laborum. Laboris culpa ea
-                                        incididunt dolore ipsum tempor duis do ullamco eiusmod officia magna ad id.</li>
+                                    <li class="check-list__item">10K Uniquely Created Hbarbarian Club NFTs</li>
+                                    <li class="check-list__item">Rarity Driven Ranking System, Based on 100+ Traits/Subtraits</li>
+                                    <li class="check-list__item">Interesting Tokenomics - TBA</li>
+                                    <li class="check-list__item">Onsite Primary Market - Built Natively on HederaHashgraph</li>
+                                    <li class="check-list__item">Exciting Future Plans for Hbarbarian Club Ecosystem</li>
                                 </ul>
                             </div>
                             <div class="most-popular__left">
@@ -349,65 +347,65 @@
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking3.jpg" alt="">
-                                            <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                            <!--  <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
-                                            </a>
+                                            </a> -->
                                         </div>
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking2.jpg" alt="">
-                                            <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                              <!--<a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
-                                            </a>
+                                            </a> -->
                                         </div>
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking.jpg" alt="">
-                                            <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                             <!-- <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
-                                            </a>
+                                            </a> -->
                                         </div>
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking4.jpg" alt="">
-                                            <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                              <!-- <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
-                                            </a>
+                                            </a> -->
                                         </div>
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking5.jpg" alt="">
-                                            <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                            <!--  <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
-                                            </a>
+                                            </a> -->
                                         </div>
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking6.jpg" alt="">
-                                            <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                             <!-- <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
-                                            </a>
+                                            </a> -->
                                         </div>
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking7.jpg" alt="">
-                                            <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                           <!--   <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
-                                            </a>
+                                            </a> -->
                                         </div>
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking8.jpg" alt="">
-                                            <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                            <!--  <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
-                                            </a>
+                                            </a> -->
                                         </div>
                                     </div>
                                     <!-- <div class="box ui-slider__item js-slider-item">
@@ -421,25 +419,25 @@
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking10.jpg" alt="">
-                                            <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                            <!--  <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
-                                            </a>
+                                            </a> -->
                                         </div>
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking11.jpg" alt="">
-                                            <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                          <!--    <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
-                                            </a>
+                                            </a> -->
                                         </div>
                                     </div>
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking12.jpg" alt="">
-                                            <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                           <!--   <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
-                                            </a>
+                                            </a> -->
                                         </div>
                                     </div>
 
@@ -1206,28 +1204,30 @@
                 number: 1,
                 title: "Pixel Hbarbarian Drop",
                 text:
-                    "Completed"
+                    "Seed phase on Gomint! Having Pixel Hbarbarians will provide the holder with benefits on the main Hbarbarian Club Sale. \n" +
+                    "Specifics will be announced soon."
             },
             {
                 complete: false,
                 number: 2,
-                title: "Hbarbarian Club Drop",
+                title: "Main Hbarbarian Club Drop",
                 text:
-                    "10K Hbarbarians spawned to find their new homes : December 2021"
+                    "10K Hbarbarians spawned to find their homes in this new world : December 2021"
             },
             {
                 complete: false,
                 number: 3,
                 title: "Hbarbarian Rarity Score and Hbarbarian Club Leaderboard",
                 text:
-                    " "
+                    " Onsite rarity checker will be enabled after the Sale is completed. Hbarbarians will be ranked based on the rarity of the traits they possess. " +
+                    " Additionally we will bring the Hbarbarian Club Score, to the light, which will be one of the key factors in the Eco system. "
             },
             {
                 complete: false,
                 number: 4,
                 title: "Exciting Announcement ",
                 text:
-                    "January 2022"
+                    "Exciting annoucement regarding the next steps, planned for Hbarbarian Club : January 2022"
             },
         ];
 
