collection bg changed

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             <!-- BEGIN PRESENTATION -->
             <section class="presentation-block">
                 <div class="presentation-block__main wrapper">
-                    <h3 class="presentation-block__title main-title main-title_white" data-title="Collection" id="ui">
+                    <h3 class="presentation-block__title main-title " data-title="Collection" id="ui">
                         <span class="main-title__text">Collection</span>
                     </h3>
                     <div class="ui-slider js-slider">
