--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 <div class="header__center js-from-1">
                     <div class="header-mob js-content-1">
                         <ul class="main-nav">
-                            <!-- <li class="main-nav__item">
-                                <a class="main-nav__link js-scrolltoid" href="#abt">About</a>
-                            </li> -->
+                            <li class="main-nav__item">
+                                <a class="main-nav__link js-scrolltoid" href="#abt">About Us</a>
+                            </li>
                             <li class="main-nav__item">
                                 <a class="main-nav__link js-scrolltoid" href="#ui">Collection</a>
                             </li>
