Footer rights phrase changed

--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
             <div class="footer-bottom">
                 <div class="footer-bottom__main wrapper">
                     <br><br>
-                    <span class="copyrights" style="color: black;">&copy; All rights reserved. Pirates NFT 2021</span>
+                    <span class="copyrights" style="color: black;">&copy; All rights reserved. Hbarbarian Club | 2021</span>
                 </div>
             </div>
             <div class="footer__bg" data-bg="assets/img/footer-bg.png"></div>
