--- a/index.html
+++ b/index.html
@@ -1050,11 +1050,13 @@
                                 <!-- <div class="subscribe__left">
                                     <input class="subscribe__input text-input" type="text" placeholder="Email">
                                 </div> -->
-                                <div class="subscribe__right">
-                                    <button class="subscribe__button button">
-                                        <span class="button__text">Join Channel</span>
-                                    </button>
-                                </div>
+                                <a href="http://discord.gg/2jKtZqeE66">
+                                    <div class="subscribe__right">
+                                        <button class="subscribe__button button">
+                                            <span class="button__text">Join Channel</span>
+                                        </button>
+                                    </div>
+                                </a>
                             </div>
                         </form>
                     </div>
