--- a/index.html
+++ b/index.html
@@ -1111,8 +1111,9 @@
                             <div class="trial-form">
                                 <span class="trial-form__title">Get a free trial for <span
                                         class="orange">30</span>&nbsp;days</span>
-                                <span class="trial-form__text">Culpa non ex tempor qui nulla laborum. Laboris culpa ea
-                                    incididunt dolore ipsum tempor duis do ullamc.</span>
+                                <span class="trial-form__text">Seeking to get notified on the latest news of Hbarbarian Club?
+                                    Join us at our official Discord server and be a part of the Hbarbarian Club Family!
+                                    We value you thoughts, ideas, and suggestions and we are thrilled you have you onboard with us!</span>
                                 <!-- <input class="text-input" type="text" placeholder="Name">
                                 <input class="text-input" type="email" placeholder="Email">
                                 <textarea class="textarea" placeholder="Message"></textarea>
