--- a/index.html
+++ b/index.html
@@ -1043,8 +1043,9 @@
                     <div class="subscription__max">
                         <span class="above-title">We carry news</span>
                         <span class="subscription__title">Join Our Discord Channel</span>
-                        <span class="subscription__text">Culpa non ex tempor qui nulla laborum. Laboris culpa ea ipsum
-                            tempor duis do ullamco eiusmod officia magna ad id.</span>
+                        <span class="subscription__text">Seeking to get notified on the latest news of Hbarbarian Club?
+                            Join us at our official Discord server and be a part of the Hbarbarian Club Family!
+                            We value you thoughts, ideas, and suggestions and we are thrilled you have you onboard with us!</span>
                         <form>
                             <div class="subscribe">
                                 <!-- <div class="subscribe__left">
