--- a/index.html
+++ b/index.html
@@ -1044,8 +1044,8 @@
                         <span class="above-title">We carry news</span>
                         <span class="subscription__title">Join Our Discord Channel</span>
                         <span class="subscription__text">Seeking to get notified on the latest news of Hbarbarian Club?
-                            Join us at our official Discord server and be a part of the Hbarbarian Club Family!
-                            We value you thoughts, ideas, and suggestions and we are thrilled you have you onboard with us!</span>
+                            Join us at our Official Discord server and be a part of the Hbarbarian Club Family!
+                            We value your thoughts, ideas, & suggestions and we are thrilled you have you onboard with us!</span>
                         <form>
                             <div class="subscribe">
                                 <!-- <div class="subscribe__left">
