--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
                 </div>
                 <img class="most-popular__left-element side-element"
                     src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="assets/img/svg/side-element_2 copy.png" alt="" style="left:-100px;top:17%;">
+                    data-lazy="assets/img/svg/side-element_2 copy.jpg" alt="" style="left:-100px;top:17%;">
 
                 <img class="what-you-get__right-element side-element"
                     src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="assets/img/svg/side-element_1 copy.png" alt="" style="right:-100px;top:23%;">
+                    data-lazy="assets/img/svg/side-element_1 copy.jpg" alt="" style="right:-100px;top:23%;">
                 <!-- THE MOST POPULAR END -->
 
                 <!-- BEGIN WHAT YOU GET -->
