--- a/index.html
+++ b/index.html
@@ -675,10 +675,10 @@
                 </div>
                 <img class="responses-block__left-element side-element"
                     src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="assets/img/svg/side-element_2 copy.png" alt="" style="left:-100px;top:0;">
+                    data-lazy="assets/img/svg/side-element_2 copy.jpg" alt="" style="left:-100px;top:0;">
                 <img class="trial-block__right-element side-element"
                     src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="assets/img/svg/side-element_1 copy.png" alt="" style="right:-80px;top:40%;">
+                    data-lazy="assets/img/svg/side-element_1 copy.jpg" alt="" style="right:-80px;top:40%;">
             </div>
             <!-- RESPONSES END -->
 
