discord link issue - open in new tab

--- a/index.html
+++ b/index.html
@@ -1044,17 +1044,17 @@
                         <span class="above-title">We carry news</span>
                         <span class="subscription__title">Join Our Discord Channel</span>
                         <span class="subscription__text">Seeking to get notified on the latest news of Hbarbarian Club?
-                            Join us at our Official Discord server and be a part of the Hbarbarian Club Family!
-                            We value your thoughts, ideas, & suggestions and we are thrilled you have you onboard with us!</span>
+                            Join us at our official Discord server and be a part of the Hbarbarian Club Family!
+                            We value you thoughts, ideas, and suggestions and we are thrilled you have you onboard with us!</span>
                         <form>
                             <div class="subscribe">
                                 <!-- <div class="subscribe__left">
                                     <input class="subscribe__input text-input" type="text" placeholder="Email">
                                 </div> -->
-                                <a href="http://discord.gg/2jKtZqeE66">
+                                <a href="http://discord.gg/2jKtZqeE66" target="_blank" rel="noopener noreferrer">
                                     <div class="subscribe__right">
                                         <button class="subscribe__button button">
-                                            <span class="button__text">Join Channel</span>
+                                            <a href="http://discord.gg/2jKtZqeE66" target="_blank" rel="noopener noreferrer" span class="button__text">Join Channel</span>
                                         </button>
                                     </div>
                                 </a>
