--- a/index.html
+++ b/index.html
@@ -1051,13 +1051,12 @@
                                 <!-- <div class="subscribe__left">
                                     <input class="subscribe__input text-input" type="text" placeholder="Email">
                                 </div> -->
-                                <a href="http://discord.gg/2jKtZqeE66" target="_blank" rel="noopener noreferrer">
-                                    <div class="subscribe__right">
-                                        <button class="subscribe__button button">
-                                            <a href="http://discord.gg/2jKtZqeE66" target="_blank" rel="noopener noreferrer" span class="button__text">Join Channel</span>
-                                        </button>
-                                    </div>
-                                </a>
+                                <div class="subscribe__right">
+                                    <button class="subscribe__button button" onclick=" window.open('http:/\/discord.gg/2jKtZqeE66','_blank')"> <span class="button__text">Join Channel</span></button>
+                                    <!-- <button class="subscribe__button button">
+                                        <span class="button__text">Join Channel</span>
+                                    </button> -->
+                                </div>
                             </div>
                         </form>
                     </div>
