discord desc typo

--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@
                         <span class="subscription__title">Join Our Discord Channel</span>
                         <span class="subscription__text">Seeking to get notified on the latest news of Hbarbarian Club?
                             Join us at our official Discord server and be a part of the Hbarbarian Club Family!
-                            We value you thoughts, ideas, and suggestions and we are thrilled to have you onboard with us!</span>
+                            We value your thoughts, ideas, and suggestions and we are thrilled to have you onboard with us!</span>
                         <form>
                             <div class="subscribe">
                                 <!-- <div class="subscribe__left">
