--- a/index.html
+++ b/index.html
@@ -122,7 +122,11 @@
                 <!-- <div class="first-screen__bg-2" data-bg="assets/img/first-screen-bottom.png" data-lazy-mob></div> -->
             </section>
             <!-- FIRST SCREEN END -->
-
+            <div class="presale-button">
+                <button id="prebutton" onclick="location.href=`https://buy.hbarbarian.club`" type="button">
+                    <span>Pre Sale - Click Here</span>
+                  </button>
+            </div>
             <div class="main-top">
 
                 <!-- BEGIN THE MOST POPULAR -->
